--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 pypdf2
-langchain
-sentence-transformers
-faiss-cpu
-transformers
 torch
 accelerate
 colorama 
 halo
 langchain-community
-langchain-huggingface
+pydantic
 fastapi
 uvicorn
-pydantic
+python-dotenv
+langchain
+langchain-together
+transformers
+sentence-transformers
+faiss-cpu
